# commandservice

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
src/: loader.rs  log.rs  server.rs
