[package]
name = "commandservice"
version = "0.1.0"
authors = ["cozyGalvinism <reallifejunkies@googlemail.com>"]
edition = "2018"

[[bin]]
name = "commandservice-server"
path = "src/server.rs"


[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
rand = "0.8.4"
prost-types = "0.8.0"
tokio-stream = "0.1.7"
async-stream = "0.3.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
chrono = "0.4.19"
bpp-command-api = { git = "https://github.com/ByersPlusPlus/bpp-command-api", tag = "v0.2.0-1" }
# Uncomment this, if you have the API in the parent directory and do some debugging
# Don't forget to comment the entry above
# bpp-command-api = { path = "../bpp-command-api" }
dyn-clone = "1.0.4"
libloading = "0.7.0"
async-trait = "0.1.51"
custom_error = "1.9.2"

[build-dependencies]
tonic-build = "0.5.2"